// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Panel /> Should render danger a title on header 1`] = `
<div
  className="panel"
>
  <div
    className="panel-title"
  >
    <span>
      danger
    </span>
  </div>
  <div
    className="panel-body"
  >
    Lorem Ipsum
  </div>
</div>
`;

exports[`component <Panel /> should render correctly 1`] = `
<div
  className="panel"
>
  <div
    className="panel-body"
  >
    Lorem Ipsum
  </div>
</div>
`;
